Phase 8: Small fixes and changes to verify output (10)